--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
-  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>fonts/ubuntu-v19-latin/ubuntu-v19-latin.css">
 
   <title>VezyWorship</title>
 </head>
